--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "start": "node ."
   },
   "dependencies": {
-    "cheerio": "^1.0.0-rc.10"
+    "cheerio": "^1.0.0-rc.10",
+    "vardict": "^2.0.0"
   }
 }
