✨ Add code for automatic JSON generation
This code can now automatically generate JSON files with parsed data
from a directory of HTM files.

--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   "license": "MIT",
   "type": "module",
   "scripts": {
-    "start": "node ."
+    "start": "node . --dir ./data/htm/ssc-2019"
   },
   "dependencies": {
     "cheerio": "^1.0.0-rc.10",
